# smdrs

./: Cargo.toml
src/: application.rs  logging.rs  main.rs
src/components/: app.rs  mod.rs  smd.rs  titled_border.rs
src/components/configuration/: mod.rs
src/components/configuration/policy/: mod.rs  policy_dashboard.rs  policy_header.rs  policy_row.rs  policy_table.rs
src/components/configuration/repository/: mod.rs  repository_dashboard.rs  repository_list.rs  repository_manager_list.rs
src/components/extras/: menu_item.rs  mod.rs  titled_border.rs
src/components/metrics/: metric_card.rs  metric_dashboard.rs  mod.rs
src/components/quarantine/: mod.rs  quarantine_header.rs  quarantine_row.rs  quarantine_table.rs
src/components/templates/: app.aml  titled_border.aml
src/components/templates/quarantine/: quarantine_header.aml  quarantine_table.aml
src/core/: component_bucket.rs  middleware.rs  mod.rs
src/core/api/: dummy_client.rs  firewall_client.rs  mod.rs  quarantine_message.rs
src/templates/: smd.aml
src/templates/configuration/policy/: policy_dashboard.aml  policy_row.aml
src/templates/configuration/repository/: repository_dashboard.aml  repository_list.aml  repository_manager_list.aml
src/templates/extras/: menu_item.aml  titled_border.aml
src/templates/metrics/: metric_card.aml  metric_dashboard.aml
src/templates/quarantine/: quarantine_row.aml  quarantine_table.aml
